[package]
name = "jxl_zip_maker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jwalk = { git = "https://github.com/Byron/jwalk.git" }
zip = "0.6.6"
log = "0.4.20"
fern = "0.6.2"
chrono = "0.4.34"
md-5 = "0.10.6"
rayon = "1.8.1"
image = "0.24.9"
trash = "3.3.1"

[profile.release]
lto = true
